# pagoda

./: AUTHORS  AbstractVariable.C  AbstractVariable.H  Aggregation.C  Aggregation.H  AggregationDimension.C  AggregationDimension.H  AggregationJoinExisting.C  AggregationJoinExisting.H  AggregationUnion.C  AggregationUnion.H  AggregationVariable.C  AggregationVariable.H  Array.C  Array.H  Attribute.C  Attribute.H  BoundaryVariable.C  COPYING  CommandLineParser.C  CommandLineParser.H  Common.H  ConnectivityVariable.C  ConnectivityVariable.H  CoordinateVariable.C  CoordinateVariable.H  DataType.C  DataType.H  Dataset.C  Dataset.H  Debug.C  Debug.H  Dimension.C  Dimension.H  DimensionSlice.C  DimensionSlice.H  DimensionSlice64.C  DimensionSlice64.H  DistributedMask.C  DistributedMask.H  (+85 more)
config/: config.guess  config.h.in  config.sub  depcomp  gcrm_arg_parse.m4  gcrm_check_package.m4  gcrm_cxx_variadic_macro.m4  install-sh  missing  pagoda_check_package.m4  pagoda_cxx_variadic_macro.m4
data/: FillValue.cdl  test_pgecat1.cdl  test_pgecat2.cdl  test_pgpdq.cdl
doc/: Doxyfile  UserGuide.rst  style
examples/: dim_bin.C  subset.C  time_avg.C
m4/: pagoda_arg_parse.m4  pagoda_check_package.m4  pagoda_f77_library_ldflags.m4  pagoda_ga_gop.m4  pagoda_ga_mpi_pgroup_comm.m4  pagoda_mpi_unwrap.m4  pagoda_pnetcdf_inq_format.m4  pagoda_pnetcdf_nb.m4
papers/2010-ESI/: history.txt
papers/2010-ICPP/: Makefile  abstract.tex  acknowledgment.tex  conclusion.tex  design.tex  evaluation.tex  future.tex  implementation.tex  introduction.tex  mydvipdf.sh  outline.txt  paper.bib  paper.tex  requirements.tex  results.tex
papers/2010-ICPP/images/: Subset0.eps  Subset0.pptx  Subset1.eps  Subset1.pptx  geodesic.eps  geodesic2.eps  geodesic2.psd  morton.eps  pack.eps  pack.pptx  panels.eps  partialsum.eps  partialsum.pptx  partialsum_label.eps  reindex.eps  reindex.pptx  reindex2.eps  reindex_label.eps  unpack.eps  unpack.pptx  unpack_label.eps
papers/2010-ICPP/plots/: Makefile  strong.eps  strong.gnuplot  strong.tex  strong_hist.eps  strong_hist.gnuplot  strong_hist.tex  strong_io.eps  strong_io.gnuplot  strong_io.tex  strong_io_hist.eps  strong_io_hist.gnuplot  strong_io_hist.tex  subsetter_runs.ods  test.gnuplot
papers/2011-CMMAP/: Presentation.pptx
sandbox/: README  TestArray.C  TestBin.C  TestCommandLine.C  TestDimension.C  TestDistance.C  TestEnum.C  TestGet.C  TestGrid.C  TestGroups.C  TestJoin.C  TestMaskMap.C  TestNumeric.C  TestPartialSum.C  TestPnetcdfAttribute.C  TestPnetcdfDataset.C  TestRavel.C  TestRead.C  TestRead2.C  TestRead2b.C  TestRead2c.C  TestRead2d.C  TestRead3.C  TestReduction.C  TestScatter.C  TestSlice.C  TestTemplates.C  TestTranspose.C  TestTranspose2.C  TestTranspose3.C  TestUnion.C  TestVecBool.C  TestWrite.C
sandbox/ga/: TestAttribute.C  TestDimension.C  TestGet.C  TestJoin.C  TestPartialSum.C  TestPnetcdfDataset.C  TestRavel.C  TestSort.C  TestUnion.C
src/: AbstractArray.C  AbstractArray.H  AbstractArray_op.C  AbstractArray_op_scalar.C  AbstractArray_op_scalar_v.C  AbstractArray_op_scalar_vc.C  AbstractArray_op_v.C  AbstractArray_op_vc.C  AbstractDataset.C  AbstractDataset.H  AbstractFileWriter.C  AbstractFileWriter.H  AbstractVariable.C  AbstractVariable.H  Aggregation.C  Aggregation.H  AggregationDimension.C  AggregationDimension.H  AggregationJoinExisting.C  AggregationJoinExisting.H  AggregationUnion.C  AggregationUnion.H  AggregationVariable.C  AggregationVariable.H  AllNodeArray.H  Array.C  Array.H  Attribute.C  Attribute.H  Bootstrap.C  Bootstrap.H  BoundaryVariable.H  Collectives.C  Collectives.H  CommandException.H  CommandLineOption.C  CommandLineOption.H  CommandLineParser.C  CommandLineParser.H  Common.H  (+170 more)
src_old/: gcrmSubset.C
tests/: FillValue.C  Makefile.am  Makefile.in  Test.C  TestArray.C  TestArrayGetMask.C  TestAttribute.C  TestBin.C  TestCommandLine.C  TestDimension.C  TestDistance.C  TestEnum.C  TestGet.C  TestGrid.C  TestJoin.C  TestLocateRegion.C  TestMaskMap.C  TestNetcdfDataset.C  TestOpen.C  TestPartialSum.C  TestPnetcdfDataset.C  TestPolymorphic.C  TestRavel.C  TestRead.C  TestScanAdd.C  TestScanAdd.c  TestScatter.C  TestSort.C  TestUnion.C  TestUnpack.c  TestWrite.C  atlocal.in  local.at  pgra.at  pgra.test  suite.at
tests/ga/: TestDimension.C  TestEnum.C  TestJoin.C  TestLocateRegion.C  TestNetcdfDataset.C  TestOpen.C  TestPartialSum.C  TestPnetcdfDataset.C  TestRavel.C  TestRead.C  TestRef.C  TestUnion.C
tools/: datatype_gen.py
